Ensure coach goal editor hidden styling restores display

--- a/workspace.html
+++ b/workspace.html
@@ -203,6 +203,7 @@
   .coach-goal-display:hover .coach-goal-edit-icon{opacity:1}
   .coach-goal-actions{display:flex;gap:8px;flex-wrap:wrap}
   .coach-goal-form{display:flex;flex-direction:column;gap:8px}
+  .coach-goal-form[hidden]{display:none !important}
   .coach-goal-input{width:100%;padding:8px 10px;border:1px solid #c9dfff;border-radius:10px;font:inherit}
   .coach-goal-status{font-size:12px;color:#2f568f}
   .coach-goal-status.error{color:#b32500}
@@ -1104,6 +1105,9 @@
     toggleGoalEditor(false);
     syncGoalUI();
     setGoalStatus(GOAL_STATUS_DEFAULT);
+    if (coachGoalDisplay) {
+      requestAnimationFrame(() => coachGoalDisplay.focus({ preventScroll: true }));
+    }
   });
 
   coachGoalForm?.addEventListener('submit', async (event) => {
@@ -1114,6 +1118,9 @@
     if (Number.isFinite(numericDesired) && numericDesired === getDailyGoalTarget()) {
       toggleGoalEditor(false);
       setGoalStatus('Goal unchanged—stay consistent!');
+      if (coachGoalDisplay) {
+        requestAnimationFrame(() => coachGoalDisplay.focus({ preventScroll: true }));
+      }
       return;
     }
     setGoalSaving(true);
