--- a/workspace.html
+++ b/workspace.html
@@ -1561,7 +1561,9 @@
       profile?.career_story?.journey,
       profile?.career_story?.flow_state_work,
       profile?.career_story?.current_vs_next,
+      profile?.career_story?.ideal_environment,
       profile?.career_story?.long_term_vision,
+      profile?.career_story?.beyond_resume,
       profile?.role,
       notesInput.value
     ].filter(Boolean).join(' ').toLowerCase();
