--- a/onboarding.html
+++ b/onboarding.html
@@ -183,49 +183,49 @@
     <p class="sub">(Your answers help JobSprint understand you deeply — so it can write, tailor, and guide you better later.)</p>
 
     <label for="journey">1. Your Journey So Far</label>
-    <p class="field-hint">“How did your career begin, and what moments have shaped who you are today?”</p>
+    <p class="field-hint">How did your career begin, and what moments have shaped who you are today?</p>
     <textarea
       id="journey"
       placeholder="Share how your career began and the moments that shaped you.&#10;&#10;Example: “I started as a graphic designer because I loved art, but over time I found myself fascinated by how brands tell stories — that led me into marketing.”"
     ></textarea>
 
     <label for="strengths">2. What Makes You, You</label>
-    <p class="field-hint">“What are your biggest strengths or superpowers? When do they shine the most?”</p>
+    <p class="field-hint">What are your biggest strengths or superpowers? When do they shine the most?</p>
     <textarea
       id="strengths"
       placeholder="Share the strengths or superpowers you're known for.&#10;&#10;Example: “I’m incredibly curious — I can’t rest until I understand how something works. That’s how I taught myself Python in college and ended up automating our team reports.”"
     ></textarea>
 
     <label for="flow">3. When Work Feels Effortless</label>
-    <p class="field-hint">“What kind of work makes you lose track of time? What problems do you love solving — and why?”</p>
+    <p class="field-hint">What kind of work makes you lose track of time? What problems do you love solving — and why?</p>
     <textarea
       id="flow"
       placeholder="Describe the work that makes time fly and the problems you love solving.&#10;&#10;Example: “I love creating systems out of chaos — organizing messy processes into something simple. I once turned a 50-step onboarding checklist into a 3-step Notion flow.”"
     ></textarea>
 
     <label for="nextRole">4. What You’re Ready For Next</label>
-    <p class="field-hint">“If you could design your next chapter, what would it look like?”</p>
+    <p class="field-hint">If you could design your next chapter, what would it look like?</p>
     <textarea
       id="nextRole"
       placeholder="Imagine the work, impact, or feeling you want next.&#10;&#10;Example: “I want to move into product strategy — to build tools people actually enjoy using, not just tolerate.”"
     ></textarea>
 
     <label for="environment">5. The Kind of Place You Thrive In</label>
-    <p class="field-hint">“Describe the kind of team or environment where you do your best work.”</p>
+    <p class="field-hint">Describe the kind of team or environment where you do your best work.</p>
     <textarea
       id="environment"
       placeholder="Describe the team, culture, or environment where you thrive.&#10;&#10;Example: “I love small teams where people care more about ownership than hierarchy — where it’s okay to experiment and fail fast.”"
     ></textarea>
 
     <label for="vision">6. Looking Ahead</label>
-    <p class="field-hint">“Where do you hope this path leads in the next few years? What growth excites you most?”</p>
+    <p class="field-hint">Where do you hope this path leads in the next few years? What growth excites you most?</p>
     <textarea
       id="vision"
       placeholder="Share the growth or milestones you hope to reach in the coming years.&#10;&#10;Example: “In five years, I want to lead a small product team, mentor younger folks, and have built something meaningful enough to be proud of.”"
     ></textarea>
 
     <label for="beyondResume">7. Beyond the Resume (optional but powerful)</label>
-    <p class="field-hint">“What’s something people don’t know about you — a side project, habit, or passion that influences how you work?”</p>
+    <p class="field-hint">What’s something people don’t know about you — a side project, habit, or passion that influences how you work?</p>
     <textarea
       id="beyondResume"
       placeholder="Share the passions or projects that influence how you work.&#10;&#10;Example: “I run a small travel blog — it keeps my storytelling sharp and reminds me to see details most people overlook.”"
